client/frontend/sale.css
.product {
    background-color: var(--lime-green-alpha);
    padding: 20px;
    min-width: 20%;
    margin: 5px;
}

.product > p {
    margin: 0px;
}

.product-list {
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
}

.products-container {
    width: 100%;
    overflow: auto;
    max-height: 100vh;
    margin: 8px;
}

.sale-container {
    display: grid;
    grid-template-columns: 70% 30%;
    height: 100%;
}

.sidebar {
    display: grid;
    grid-template-rows: 60% 40%;
    background-color: #000;
}

.ticket {
    padding: 15px;
}

.ticket > h2, .ticket > h3 {
    margin: 2px 0;
}

.spacer {
    padding: 1px;
    margin: 5px 0;
    background-color: var(--lime-green);
    border-radius: 5px;
}

.order-table {
    width: 100%;
    max-height: 50vh;
    min-height: 50vh;
}

.order-table tr {
    display: block;
    max-height: 30px;
}

.order-table td:nth-child(2) {
    width:70%;
}

.order-table td:nth-child(3) {
    text-align: right;
    width: 100%;
}

#order-total {
    text-align: right;
}

body {
    margin: 0;
}

